--- a/index.html
+++ b/index.html
@@ -855,6 +855,8 @@
 <li><strong>A class of short-term models for the oil industry addressing speculative storage</strong>. arXiv preprint arXiv:2003.11790, 2020 with Y. Achdou, J.-M. Lasry, P.-L. Lions, A. Rostand and J. Scheinkman.</li>
 <li><strong>Mean Field Game Approach to Bitcoin Mining</strong>. arXiv preprint arXiv:2004.08167, 2020 with L. Bertucci, J.-M. Lasry and P.-L. Lions.</li>
 <li><strong>Monotone solutions for mean field games master equations: finite state space and optimal stopping</strong>. arXiv preprint arXiv:2007.11854.</li>
+<li><strong>Mean field games with incomplete information</strong> <a href="/uploads/incomplete.pdf" target="_blank">pdf</a></li>
+<li><strong>Mean field games master equations : from discrete to continuous state space</strong> with Alekos Cecchin <a href="/uploads/discretization.pdf" target="_blank">pdf</a></li>
 </ul>
 
 
