--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
       
       <img class="avatar avatar-circle"
            width="270" height="270"
-           src="/authors/admin/avatar_hu13b5ebdf51f4592fd78189f92a8b500b_3752475_270x270_fill_q75_lanczos_center.JPG" alt="Charles Bertucci">
+           src="/authors/admin/avatar_hubbd4d7d5d56f20da9cd1f484a3c0d7a6_2079536_270x270_fill_q75_lanczos_center.JPG" alt="Charles Bertucci">
       
 
       <div class="portrait-title">
@@ -685,8 +685,8 @@
     <h1>Welcome!</h1>
 
     <div class="article-style">
-      <p>I am a CNRS researcher in mathematics at the applied maths department of École Polytechnique in Palaiseau, France. I defended my thesis on the 11th of December, 2018.</p>
-<p>I am also a part time teacher at École Polytechnique.</p>
+      <p>I am a CNRS researcher in mathematics at the applied maths department of École Polytechnique in Palaiseau, France. I defended my thesis on the 11th of December, 2018, and I defended my Habilitation à Diriger les Recherches in June of 2022.</p>
+<p>I am also a part time teacher at École Polytechnique since 2020.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
@@ -857,8 +857,9 @@
 <li><strong>A class of short-term models for the oil industry addressing speculative storage</strong>. arXiv preprint arXiv:2003.11790, 2020 with Y. Achdou, J.-M. Lasry, P.-L. Lions, A. Rostand and J. Scheinkman.</li>
 <li><strong>Mean Field Game Approach to Bitcoin Mining</strong>. arXiv preprint arXiv:2004.08167, 2020 with L. Bertucci, J.-M. Lasry and P.-L. Lions.</li>
 <li><strong>Monotone solutions for mean field games master equations: finite state space and optimal stopping</strong>. arXiv preprint arXiv:2007.11854.</li>
-<li><strong>Mean field games with incomplete information</strong> <a href="/uploads/incomplete.pdf" target="_blank">pdf</a></li>
-<li><strong>Mean field games master equations : from discrete to continuous state space</strong> with Alekos Cecchin <a href="/uploads/discretization.pdf" target="_blank">pdf</a></li>
+<li><strong>Mean field games with incomplete information</strong>, 2022 <a href="/uploads/incomplete.pdf" target="_blank">pdf</a></li>
+<li><strong>Mean field games master equations : from discrete to continuous state space</strong>, 2022 with Alekos Cecchin <a href="/uploads/discretization.pdf" target="_blank">pdf</a></li>
+<li><strong>A singular infinite dimensional Hamilton-Jacobi-Bellman equation arising from a storage problem</strong> with Jean-Michel Lasry and Pierre-Louis Lions,  arXiv:2210.02780, 2022 <a href="/uploads/stockage.pdf" target="_blank">pdf</a></li>
 </ul>
 
 
