--- a/index.html
+++ b/index.html
@@ -685,8 +685,9 @@
     <h1>Welcome!</h1>
 
     <div class="article-style">
-      <p>I am a CNRS researcher in mathematics at the applied maths department of École Polytechnique in Palaiseau, France. I defended my thesis on the 11th of December, 2018, and I defended my Habilitation à Diriger les Recherches in June of 2022.</p>
-<p>I am also a part time teacher at École Polytechnique since 2020.</p>
+      <p>I am a CNRS researcher in Mathematics at the Applied Maths department of École polytechnique in Palaiseau, France. I defended my thesis on the 11th of December, 2018, and I defended my Habilitation à Diriger les Recherches in June of 2022.</p>
+<p>I am also a part time teacher at École polytechnique since 2020. In addition, this year, I will give a Peccot Course. You can find more information <a href="https://www.college-de-france.fr/personne/charles-bertucci" target="_blank" rel="noopener">here</a>.</p>
+<p>With Yves Achdou, Jean-Michel Lasry and Pierre-Louis Lions, we are organizing the workshop <a href="https://www.mfg-and-applications.fr/" target="_blank" rel="noopener">Mean Field Games and Applications</a>.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
@@ -856,10 +857,13 @@
 <li><strong>Master equation for the finite state space planning problem</strong>. arXiv preprint arXiv:2002.09330, 2020 with J.-M. Lasry and P.-L. Lions.</li>
 <li><strong>A class of short-term models for the oil industry addressing speculative storage</strong>. arXiv preprint arXiv:2003.11790, 2020 with Y. Achdou, J.-M. Lasry, P.-L. Lions, A. Rostand and J. Scheinkman.</li>
 <li><strong>Mean Field Game Approach to Bitcoin Mining</strong>. arXiv preprint arXiv:2004.08167, 2020 with L. Bertucci, J.-M. Lasry and P.-L. Lions.</li>
+<li><strong>How Resilient is the Bitcoin Protocol?</strong> Université Paris-Dauphine Research Paper, (3907822), with L. Bertucci, J.-m. Lasry and P.-L. Lions.</li>
 <li><strong>Monotone solutions for mean field games master equations: finite state space and optimal stopping</strong>. arXiv preprint arXiv:2007.11854.</li>
+<li><strong>Monotone solutions for mean field games master equations: continuous state space and common noise.</strong> arXiv preprint arXiv:2107.09531.</li>
 <li><strong>Mean field games with incomplete information</strong>, 2022 <a href="/uploads/incomplete.pdf" target="_blank">pdf</a></li>
 <li><strong>Mean field games master equations : from discrete to continuous state space</strong>, 2022 with Alekos Cecchin <a href="/uploads/discretization.pdf" target="_blank">pdf</a></li>
 <li><strong>A singular infinite dimensional Hamilton-Jacobi-Bellman equation arising from a storage problem</strong> with Jean-Michel Lasry and Pierre-Louis Lions,  arXiv:2210.02780, 2022 <a href="/uploads/stockage.pdf" target="_blank">pdf</a></li>
+<li><strong>A mean field model for the development of renewable capacities.</strong> arXiv preprint arXiv:2210.15023, with C. Alasseur, M. Basei and A. Cecchin.</li>
 </ul>
 
 
