--- a/index.html
+++ b/index.html
@@ -857,11 +857,11 @@
 <li><strong>Master equation for the finite state space planning problem</strong>. arXiv preprint arXiv:2002.09330, 2020 with J.-M. Lasry and P.-L. Lions.</li>
 <li><strong>A class of short-term models for the oil industry addressing speculative storage</strong>. arXiv preprint arXiv:2003.11790, 2020 with Y. Achdou, J.-M. Lasry, P.-L. Lions, A. Rostand and J. Scheinkman.</li>
 <li><strong>Mean Field Game Approach to Bitcoin Mining</strong>. arXiv preprint arXiv:2004.08167, 2020 with L. Bertucci, J.-M. Lasry and P.-L. Lions.</li>
-<li><strong>How Resilient is the Bitcoin Protocol?</strong> Université Paris-Dauphine Research Paper, (3907822), with L. Bertucci, J.-m. Lasry and P.-L. Lions.</li>
+<li><strong>How Resilient is the Bitcoin Protocol?</strong> Université Paris-Dauphine Research Paper, (3907822), with L. Bertucci, J.-M. Lasry and P.-L. Lions.</li>
 <li><strong>Monotone solutions for mean field games master equations: finite state space and optimal stopping</strong>. arXiv preprint arXiv:2007.11854.</li>
 <li><strong>Monotone solutions for mean field games master equations: continuous state space and common noise.</strong> arXiv preprint arXiv:2107.09531.</li>
 <li><strong>Mean field games with incomplete information</strong>, 2022 <a href="/uploads/incomplete.pdf" target="_blank">pdf</a></li>
-<li><strong>Mean field games master equations : from discrete to continuous state space</strong>, 2022 with Alekos Cecchin <a href="/uploads/discretization.pdf" target="_blank">pdf</a></li>
+<li><strong>Mean field games master equations : from discrete to continuous state space</strong>, 2022 with Alekos Cecchin, arXiv preprint, arXiv:2207.03191.</li>
 <li><strong>A singular infinite dimensional Hamilton-Jacobi-Bellman equation arising from a storage problem</strong> with Jean-Michel Lasry and Pierre-Louis Lions,  arXiv:2210.02780, 2022 <a href="/uploads/stockage.pdf" target="_blank">pdf</a></li>
 <li><strong>A mean field model for the development of renewable capacities.</strong> arXiv preprint arXiv:2210.15023, with C. Alasseur, M. Basei and A. Cecchin.</li>
 </ul>
