--- a/index.html
+++ b/index.html
@@ -686,8 +686,8 @@
 
     <div class="article-style">
       <p>I am a CNRS researcher in Mathematics at the Applied Maths department of École polytechnique in Palaiseau, France. I defended my thesis on the 11th of December, 2018, and I defended my Habilitation à Diriger les Recherches in June of 2022.</p>
-<p>I am also a part time teacher at École polytechnique since 2020. In addition, this year, I will give a Peccot Course. You can find more information <a href="https://www.college-de-france.fr/personne/charles-bertucci" target="_blank" rel="noopener">here</a>.</p>
-<p>With Yves Achdou, Jean-Michel Lasry and Pierre-Louis Lions, we are organizing the workshop <a href="https://www.mfg-and-applications.fr/" target="_blank" rel="noopener">Mean Field Games and Applications</a>.</p>
+<p>I am also a part time teacher at École polytechnique since 2020. In addition, this year, I gave a Peccot Course. You can find more information <a href="https://www.college-de-france.fr/personne/charles-bertucci" target="_blank" rel="noopener">here</a>. Lecture notes of the course are available <a href="/uploads/notes.pdf" target="_blank">here</a>.</p>
+<p>With Yves Achdou, Jean-Michel Lasry and Pierre-Louis Lions, we organized the workshop <a href="https://www.mfg-and-applications.fr/" target="_blank" rel="noopener">Mean Field Games and Applications</a>.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
@@ -860,10 +860,13 @@
 <li><strong>How Resilient is the Bitcoin Protocol?</strong> Université Paris-Dauphine Research Paper, (3907822), with L. Bertucci, J.-M. Lasry and P.-L. Lions.</li>
 <li><strong>Monotone solutions for mean field games master equations: finite state space and optimal stopping</strong>. arXiv preprint arXiv:2007.11854.</li>
 <li><strong>Monotone solutions for mean field games master equations: continuous state space and common noise.</strong> arXiv preprint arXiv:2107.09531.</li>
-<li><strong>Mean field games with incomplete information</strong>, 2022 <a href="/uploads/incomplete.pdf" target="_blank">pdf</a>.</li>
-<li><strong>Mean field games master equations : from discrete to continuous state space</strong>, 2022 with Alekos Cecchin, arXiv preprint, arXiv:2207.03191.</li>
-<li><strong>A singular infinite dimensional Hamilton-Jacobi-Bellman equation arising from a storage problem</strong> with Jean-Michel Lasry and Pierre-Louis Lions,  arXiv:2210.02780, 2022 <a href="/uploads/stockage.pdf" target="_blank">pdf</a></li>
-<li><strong>A mean field model for the development of renewable capacities.</strong> arXiv preprint arXiv:2210.15023, with C. Alasseur, M. Basei and A. Cecchin.</li>
+<li><strong>Mean field games with incomplete information</strong>, 2022 <a href="/uploads/incomplete.pdf" target="_blank">pdf</a></li>
+<li><strong>Mean field games master equations: from discrete to continuous state space</strong>, 2022 with Alekos Cecchin, arXiv preprint, arXiv:2207.03191.</li>
+<li><strong>A spectral dominance approach to large random matrices</strong>, 2022 with Mérouane Debbah, Jean-Michel Lasry and Pierre-Louis Lions, Journal de Mathématiques Pures et Appliquées, 164, 27-56.</li>
+<li><strong>A singular infinite dimensional Hamilton-Jacobi-Bellman equation arising from a storage problem</strong>, 2021 with Jean-Michel Lasry and Pierre-Louis Lions,  arXiv:2210.02780, 2022 <a href="/uploads/stockage.pdf" target="_blank">pdf</a></li>
+<li><strong>A mean field model for the development of renewable capacities</strong>, 2022 arXiv preprint arXiv:2210.15023, with C. Alasseur, M. Basei and A. Cecchin.</li>
+<li><strong>On Lipschitz solutions of mean field games master equation</strong>, 2023 with Jean-Michel Lasry and Pierre-Louis Lions, arXiv preprint arXiv:2302.05218,</li>
+<li><strong>Stochastic optimal transport and Hamilton-Jacobi-Bellman equations on the set of probability measures</strong>, 2023, arXiv preprint arXiv:2306.04283.</li>
 </ul>
 
 
