--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
 <p>I am also a part time teacher at École polytechnique since 2020. In addition, this year, I gave a Peccot Course. You can find more information <a href="https://www.college-de-france.fr/personne/charles-bertucci" target="_blank" rel="noopener">here</a>. Lecture notes of the course are available <a href="/uploads/notes.pdf" target="_blank">here</a>.</p>
 <p>With Yves Achdou, Jean-Michel Lasry and Pierre-Louis Lions, we organized the workshop <a href="https://www.mfg-and-applications.fr/" target="_blank" rel="noopener">Mean Field Games and Applications</a>.</p>
 <p>
-  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
+  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a> (in french, lastly updated 2024).</p>
 
     </div>
 
@@ -848,25 +848,33 @@
 <div class="col-12 col-lg-8">
 
   <ul>
-<li><strong>Optimal stopping in mean field games, an obstacle problem approach</strong>. <em>Journal de Mathématiques Pures et Appliquées</em> 2018, Volume 120, p 165-194.</li>
-<li><strong>Fokker-Planck equations of jumping particles and mean field games of impulse control</strong>. <em>Annales de l&rsquo;Institut Henri Poincaré C, Analyse non linéaire</em>. Vol. 37. No. 5. Elsevier Masson, 2020.</li>
-<li><strong>Some remarks on mean field games</strong>. <em>Communications in Partial Differential Equations</em>, 2019, vol. 44, no 3, p. 205-227 with J.-M. Lasry and P.-L. Lions.</li>
-<li><strong>Transmit strategies for massive machine-type communications based on mean field games</strong>. <em>Proceedings of the International Symposium on Wireless Communication System (ISWCS)</em>, 2018 with S. Vassilaras, J.-M. Lasry, G. Paschos, M. Debbah and P.-L. Lions</li>
-<li><strong>A remark on Uzawa&rsquo;s algorithm and an application to mean field games systems</strong>. <em>ESAIM: Mathematical Modelling and Numerical Analysis</em>, 2020, vol. 54, no 3, p. 1053-1071.</li>
-<li><strong>Strategic advantages in mean field games with a major player</strong>, 2020, <em>Comptes Rendus Mathématique</em>, 58.2 (2020): 113-118. with J.-M. Lasry and P.-L. Lions.</li>
-<li><strong>Master equation for the finite state space planning problem</strong>. arXiv preprint arXiv:2002.09330, 2020 with J.-M. Lasry and P.-L. Lions.</li>
-<li><strong>A class of short-term models for the oil industry addressing speculative storage</strong>. arXiv preprint arXiv:2003.11790, 2020 with Y. Achdou, J.-M. Lasry, P.-L. Lions, A. Rostand and J. Scheinkman.</li>
-<li><strong>Mean Field Game Approach to Bitcoin Mining</strong>. arXiv preprint arXiv:2004.08167, 2020 with L. Bertucci, J.-M. Lasry and P.-L. Lions.</li>
-<li><strong>How Resilient is the Bitcoin Protocol?</strong> Université Paris-Dauphine Research Paper, (3907822), with L. Bertucci, J.-M. Lasry and P.-L. Lions.</li>
-<li><strong>Monotone solutions for mean field games master equations: finite state space and optimal stopping</strong>. arXiv preprint arXiv:2007.11854.</li>
-<li><strong>Monotone solutions for mean field games master equations: continuous state space and common noise.</strong> arXiv preprint arXiv:2107.09531.</li>
-<li><strong>Mean field games with incomplete information</strong>, 2022 <a href="/uploads/incomplete.pdf" target="_blank">pdf</a></li>
-<li><strong>Mean field games master equations: from discrete to continuous state space</strong>, 2022 with Alekos Cecchin, arXiv preprint, arXiv:2207.03191.</li>
-<li><strong>A spectral dominance approach to large random matrices</strong>, 2022 with Mérouane Debbah, Jean-Michel Lasry and Pierre-Louis Lions, Journal de Mathématiques Pures et Appliquées, 164, 27-56.</li>
-<li><strong>A singular infinite dimensional Hamilton-Jacobi-Bellman equation arising from a storage problem</strong>, 2021 with Jean-Michel Lasry and Pierre-Louis Lions,  arXiv:2210.02780, 2022 <a href="/uploads/stockage.pdf" target="_blank">pdf</a></li>
-<li><strong>A mean field model for the development of renewable capacities</strong>, 2022 arXiv preprint arXiv:2210.15023, with C. Alasseur, M. Basei and A. Cecchin.</li>
-<li><strong>On Lipschitz solutions of mean field games master equation</strong>, 2023 with Jean-Michel Lasry and Pierre-Louis Lions, arXiv preprint arXiv:2302.05218,</li>
-<li><strong>Stochastic optimal transport and Hamilton-Jacobi-Bellman equations on the set of probability measures</strong>, 2023, arXiv preprint arXiv:2306.04283.</li>
+<li>[27] <strong>An approximation of the squared Wasserstein distance and an application to Hamilton-Jacobi equations</strong>, with Pierre-Louis Lions, arXiv preprint arXiv:2409.11793, 2024.</li>
+<li>[26] <strong>Curvature in chemotaxis: A model for ant trail pattern formation</strong>, with Matthias Rakotomalala and Milica Tomasevic, arXiv preprint arXiv:2408.13363, 2024.</li>
+<li>[25] <strong>Strategic geometric graphs through mean field games</strong>, with Matthias Rakotomalala, arXiv preprint arXiv:2404.13975, 2024.
+-[24] <strong>Noise through an additional variable for mean field games master equation on finite state space</strong>, with Charles Meynard, arXiv preprint arXiv:2402.05635, 2024.</li>
+<li>[23] <strong>A spectral dominance approach to large random matrices: part II</strong>, with Jean-Michel Lasry and Pierre-Louis Lions, arXiv preprint arXiv:2402.16376, 2024.</li>
+<li>[22] <strong>A two spaces extension of Cauchy-Lipschitz Theorem</strong>, with Pierre-Louis Lions, arXiv preprint arXiv:2402.19092, 2024.</li>
+<li>[21] <strong>Agents&rsquo; Behavior and Interest Rate Model Optimization in DeFi Lending</strong>, with Louis Bertucci, Mathis Gontier Delaunay, Olivier Gueant, and Matthieu Lesbre, available at SSRN 4802776,2024.</li>
+<li>[20] <strong>Stochastic optimal transport and Hamilton-Jacobi-Bellman equations on the set of probability measures</strong>, 2023, arXiv preprint arXiv:2306.04283.</li>
+<li>[19] <strong>On Lipschitz solutions of mean field games master equation</strong>, with Jean-Michel Lasry and Pierre-Louis Lions, Journal of Functional Analysis, 287(5), 110486, 2024.</li>
+<li>[18] <strong>A mean field model for the development of renewable capacities</strong>, with C. Alasseur, M. Basei and A. Cecchin, Mathematics and Financial Economics, 17(4), 695-719, 2023.</li>
+<li>[17] <strong>A singular infinite dimensional Hamilton-Jacobi-Bellman equation arising from a storage problem</strong>, 2022 with Jean-Michel Lasry and Pierre-Louis Lions,  arXiv:2210.02780, 2022.</li>
+<li>[16] <strong>A spectral dominance approach to large random matrices</strong>, with Mérouane Debbah, Jean-Michel Lasry and Pierre-Louis Lions, Journal de Mathématiques Pures et Appliquées, 164, 27-56, 2022.</li>
+<li>[15] <strong>Mean field games master equations: from discrete to continuous state space</strong>, SIAM journal on Mathematical Analysis, 56(2), 2569-2610, with Alekos Cecchin, 2024.</li>
+<li>[14] <strong>Mean field games with incomplete information</strong>, 2022 <a href="/uploads/incomplete.pdf" target="_blank">pdf</a></li>
+<li>[13] <strong>On monotone solutions of mean field games master equations</strong> Séminaire Laurent Schwartz—EDP et applications, 1-13, 2021.</li>
+<li>[12] <strong>Monotone solutions for mean field games master equations: continuous state space and common noise.</strong> Communications in Partial Differential Equations, 48(10-12), 1245-1285, 2023.</li>
+<li>[11] <strong>Monotone solutions for mean field games master equations: finite state space and optimal stopping</strong>. Journal de l’École polytechnique—Mathématiques, 8, 1099-1132, 2021.</li>
+<li>[10] <strong>How Resilient is the Bitcoin Protocol?</strong> Université Paris-Dauphine Research Paper, with L. Bertucci, J.-M. Lasry and P.-L. Lions, 2022.</li>
+<li>[9] <strong>Mean Field Game Approach to Bitcoin Mining</strong>. SIAM Journal on Financial Mathematics, 15(3), 960-987, with L. Bertucci, J.-M. Lasry and P.-L. Lions, 2024.</li>
+<li>[8] <strong>A class of short-term models for the oil industry addressing speculative storage</strong>. Finance and Stochastics, 26(3), 631-669, with Y. Achdou, J.-M. Lasry, P.-L. Lions, A. Rostand and J. Scheinkman, 2022.</li>
+<li>[7] <strong>Master equation for the finite state space planning problem</strong>. Archive for Rational Mechanics and Analysis, vol. 242, p. 327-342. with J.-M. Lasry and P.-L. Lions, 2021.</li>
+<li>[6] <strong>Strategic advantages in mean field games with a major player</strong>, <em>Comptes Rendus Mathématique</em>, 58.2: 113-118. with J.-M. Lasry and P.-L. Lions, 2020.</li>
+<li>[5] <strong>A remark on Uzawa&rsquo;s algorithm and an application to mean field games systems</strong>. <em>ESAIM: Mathematical Modelling and Numerical Analysis</em>, vol. 54, no 3, p. 1053-1071, 2020.</li>
+<li>[4] <strong>Transmit strategies for massive machine-type communications based on mean field games</strong>. <em>Proceedings of the International Symposium on Wireless Communication System (ISWCS)</em>, with S. Vassilaras, J.-M. Lasry, G. Paschos, M. Debbah and P.-L. Lions, 2018.</li>
+<li>[3] <strong>Some remarks on mean field games</strong>. <em>Communications in Partial Differential Equations</em>, vol. 44, no 3, p. 205-227 with J.-M. Lasry and P.-L. Lions, 2019.</li>
+<li>[2] <strong>Fokker-Planck equations of jumping particles and mean field games of impulse control</strong>. <em>Annales de l&rsquo;Institut Henri Poincaré C, Analyse non linéaire</em>, Vol. 37. No. 5. Elsevier Masson, 2020.</li>
+<li>[1] <strong>Optimal stopping in mean field games, an obstacle problem approach</strong>. <em>Journal de Mathématiques Pures et Appliquées</em>, Volume 120, p 165-194, 2018.</li>
 </ul>
 
 
